--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <version>2.2.2</version>
         </dependency>
 
+        <!-- mysql驱动包 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.12</version>
+        </dependency>
+
 
     </dependencies>
 
